# CODE2026

MATE ROV CODE/FLOAT CODE/APC_TEST_01/: APC_TEST_01.ino
MATE ROV CODE/FLOAT CODE/float/: README.md  float.ino
MATE ROV CODE/ROV CODE/MATE_ROV_2025/ROV/: joystick2_test.py  joysticks1_test.py  main.py  test.py
MATE ROV CODE/ROV CODE/MATE_ROV_2025/ROV/Computer_Model/: rivers.json
MATE ROV CODE/ROV CODE/MATE_ROV_2025/ROV/MateROV/: CalibManager.cpp  ObsSceneSwitcher.cpp  ObsSceneSwitcher.h  main.cpp
MATE ROV CODE/ROV CODE/MATE_ROV_2025/ROV/rover-arduino/rover-arduino_ts/: rover-arduino_ts.ino
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_AARON/ROV/: .gitignore  keyboard.py  widgets2.py
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_AARON/ROV/Computer_Model/: dataset.csv  show.py
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_AARON/ROV/MateROV/: CMakeLists.txt  CalibManager.h  Visual.cpp  Visual.h  main.cpp
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_AARON/ROV/NEWARM_DC_01/: NEWARM_DC_01.ino
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_OG/ROV/: .gitmodules  README.md
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_OG/ROV/Computer_Model/: map_creation.py
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_OG/ROV/MateROV/: Controller.cpp  Controller.h  NEWARM_DC_01.cpp  NEWARM_DC_02.cpp  NEWARM_DC_03.cpp  main.cpp
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_OG/ROV/MateROV/rover-arduino/: rover-arduino.ino
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_OG/ROV/NEWARM_DC_01/: NEWARM_DC_01.ino
MATE ROV CODE/ROV CODE/MATE_ROV_NEWARM_OG/ROV/NEWARM_DC_01 copy/NEWARM_DC_01_copy/: NEWARM_DC_01_copy.ino
MATE ROV CODE/crab_detection/: detection.py
